# cppstarter

./: .gitignore  CMakeLists.txt  Makefile  README.md  cppstarter.cpp
include/Commands/: Command.hpp  HelpCommand.hpp  NewCommand.hpp
include/utils/: colors.hpp
src/: main.cpp
templates/console_app/: CMakeLists.txt  Makefile
templates/console_app/src/: functions.cpp  main.cpp
templates/library_project/: CMakeLists.txt  Makefile  README.md
templates/library_project/src/: libexample.cpp  main.cpp  operations.cpp
templates/opengl2_app/: Makefile
templates/opengl_app/: CMakeLists.txt  Makefile
templates/opengl_app/include/: shader_utils.h  shapes.hpp
templates/opengl_app/src/: main.cpp  shader_utils.cpp
templates/sdl2_app/: CMakeLists.txt  Makefile
templates/sdl2_app/include/include/: app.h
templates/sdl2_app/include/src/: app.cpp  main.cpp
templates/sfml_app/: CMakeLists.txt  Makefile
templates/sfml_app/include/: game.h
templates/sfml_app/src/: game.cpp  main.cpp
templates/sfml_box2d/: Makefile
templates/sfml_box2d/src/: main.cpp
templates/sfml_box2d_app/: CMakeLists.txt  Makefile
tests/: test_example.cpp  test_main.cpp  test_math.cpp
